Auth and users modules

--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -21,6 +21,8 @@ COPY package.json yarn.lock ./
 
 RUN yarn install --prod
 
+COPY . .
+
 COPY --from=development /app/dist ./dist
 
 CMD ["node", "dist/apps/auth/main"]
