--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,26 +4,44 @@ services:
       context: .
       dockerfile: ./apps/reservations/Dockerfile
       target: development
-    command: yarn run start:dev reservations
+    command: pnpm run start:dev reservations
     env_file:
       - ./apps/reservations/.env
     ports:
-      - 3000:3000
+      - '3000:3000'
     volumes:
-      - .:/app
+      - .:/usr/src/app
   auth:
     build:
       context: .
       dockerfile: ./apps/auth/Dockerfile
       target: development
-    command: yarn run start:dev auth
+    command: pnpm run start:dev auth
     env_file:
       - ./apps/auth/.env
     ports:
-      - 3001:3001
+      - '3001:3001'
     volumes:
-      - .:/app
+      - .:/usr/src/app
+  payments:
+    build:
+      context: .
+      dockerfile: ./apps/payments/Dockerfile
+      target: development
+    command: pnpm run start:dev payments
+    env_file:
+      - ./apps/payments/.env
+    volumes:
+      - .:/usr/src/app
+  notifications:
+    build:
+      context: .
+      dockerfile: ./apps/notifications/Dockerfile
+      target: development
+    command: pnpm run start:dev notifications
+    env_file:
+      - ./apps/notifications/.env
+    volumes:
+      - .:/usr/src/app
   mongo:
-    image: mongo:4.0
-    ports:
-      - 27017:27017
+    image: mongo
